--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/icon"
-      href="assets/images/favicon.ico"
+      href="assets/images/android-chrome-512x512.png"
     />
     <!-- Font Awesome -->
     <link
@@ -114,9 +114,9 @@
               <!-- Start text slide -->
               <div class="mu-featured-slider-wrapper">
                 <div class="mu-featured-slider" id="typed-strings">
-                  <p>I am <span>Analytics Student</span></p>
-                  <p>I am <span>Leader</span></p>
-                  <p>I am <span>Woman</span></p>
+                  <p>I am a <span>Analytics Student</span></p>
+                  <p>I am a <span>Leader</span></p>
+                  <p>I am a <span>Woman</span></p>
                 </div>
                 <span id="typed"></span>
               </div>
@@ -376,59 +376,15 @@
                               <div class="mu-icon">
                                 <i class="fa fa-envelope"></i>
                               </div>
-                              <p>jettagolembiewski@gmail.com</p>
+                              <p>golembiewskijetta@gmail.com</p>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-
-                    <div class="col-md-12">
-                      <div class="mu-contact-bottom">
-                        <div id="form-messages"></div>
-                        <form
-                          id="ajax-contact"
-                          method="post"
-                          action="mailer.php"
-                          class="mu-contact-form"
-                        >
-                          <div class="form-group">
-                            <input
-                              type="text"
-                              class="form-control"
-                              placeholder="Name"
-                              id="name"
-                              name="name"
-                              required
-                            />
-                          </div>
-                          <div class="form-group">
-                            <input
-                              type="email"
-                              class="form-control"
-                              placeholder="Enter Email"
-                              id="email"
-                              name="email"
-                              required
-                            />
-                          </div>
-                          <div class="form-group">
-                            <textarea
-                              class="form-control"
-                              placeholder="Message"
-                              id="message"
-                              name="message"
-                              required
-                            ></textarea>
-                          </div>
-                          <button type="submit" class="mu-send-msg-btn">
-                            <span>SUBMIT</span>
-                          </button>
-                        </form>
-                      </div>
-                    </div>
                   </div>
                 </div>
+              </div>
                 <!-- End Contact Content -->
               </div>
             </div>
