--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/icon"
-      href="assets/images/android-chrome-512x512.png"
+      href="images/android-chrome-512x512.png"
     />
     <!-- Font Awesome -->
     <link
@@ -18,15 +18,15 @@
       rel="stylesheet"
     />
     <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Slick slider -->
-    <link href="assets/css/slick.css" rel="stylesheet" />
+    <link href="css/slick.css" rel="stylesheet" />
     <!-- Gallery Lightbox -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="css/magnific-popup.css" rel="stylesheet" />
     <!-- Theme color -->
     <link
       id="switcher"
-      href="assets/css/theme-color/default-theme.css"
+      href="css/theme-color/default-theme.css"
       rel="stylesheet"
     />
 
