--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                       <div class="mu-about-content-left">
                         <img
                           class="mu-profile-img"
-                          src="assets/images/Jetta.jpg"
+                          src="images/Jetta.jpg"
                           alt="Profile Image"
                         />
                       </div>
@@ -414,32 +414,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Slick slider -->
-    <script type="text/javascript" src="assets/js/slick.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <!-- Filterable Gallery js -->
     <script
       type="text/javascript"
-      src="assets/js/jquery.filterizr.min.js"
+      src="js/jquery.filterizr.min.js"
     ></script>
     <!-- Gallery Lightbox -->
     <script
       type="text/javascript"
-      src="assets/js/jquery.magnific-popup.min.js"
+      src="js/jquery.magnific-popup.min.js"
     ></script>
     <!-- Ajax contact form  -->
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <!-- Featured Slider -->
-    <script type="text/javascript" src="assets/js/typed.min.js"></script>
+    <script type="text/javascript" src="js/typed.min.js"></script>
     <!-- On scroll JS  -->
-    <script src="assets/js/jquery.appear.js"></script>
+    <script src="js/jquery.appear.js"></script>
     <!-- Progress Bar -->
     <script
       type="text/javascript"
-      src="assets/js/jquery.lineProgressbar.js"
+      src="js/jquery.lineProgressbar.js"
     ></script>
 
     <!-- Custom js -->
-    <script type="text/javascript" src="assets/js/custom.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
   </body>
 </html>
