--- a/index.html
+++ b/index.html
@@ -442,4 +442,16 @@
     <!-- Custom js -->
     <script type="text/javascript" src="js/custom.js"></script>
   </body>
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M32M3P9QNW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M32M3P9QNW');
+</script>
+
 </html>
