--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3B0X2BQ6RJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3B0X2BQ6RJ');
+</script>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -55,16 +65,6 @@
   </head>
 
 
-  
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M32M3P9QNW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-M32M3P9QNW');
-</script>
 
   <body>
     <!-- Start Header -->
@@ -421,6 +421,7 @@
         </div>
       </div>
     </footer>
+
     <!-- End footer -->
 
     <!-- jQuery library -->
@@ -456,6 +457,7 @@
     <script type="text/javascript" src="js/custom.js"></script>
   </body>
 
+  
 
 
 </html>
