--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <!-- Start text slide -->
               <div class="mu-featured-slider-wrapper">
                 <div class="mu-featured-slider" id="typed-strings">
-                  <p>I am a <span>Analytics Student</span></p>
-                  <p>I am a <span>Leader</span></p>
-                  <p>I am a <span>Woman</span></p>
+                  <p>I am an <span>Analytics Student</span></p>
+                  <p>I am an <span>Leader</span></p>
+                  <p>I am an <span>Woman</span></p>
                 </div>
                 <span id="typed"></span>
               </div>
@@ -213,7 +213,7 @@
 
                         <!-- Download Ressume Button -->
                         <a
-                          href="file:///Users/jettagolembiewski/Downloads/Resume.pdf"
+                          href="file:///Users/jettagolembiewski/Downloads/Resume%20(1).pdf"
                           class="mu-resume-btn"
                           >Download My Resume</a
                         >
@@ -380,7 +380,7 @@
                               <div class="mu-icon">
                                 <i class="fa fa-envelope"></i>
                               </div>
-                              <p>golembiewskijetta@gmail.com</p>
+                              <p>jettagolembiewski55@gmail.com</p>
                             </div>
                           </div>
                         </div>
