--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <!-- Start text slide -->
               <div class="mu-featured-slider-wrapper">
                 <div class="mu-featured-slider" id="typed-strings">
-                  <p>I am an <span>Analytics Student</span></p>
-                  <p>I am an <span>Leader</span></p>
-                  <p>I am an <span>Woman</span></p>
+                  <p>I am an<span>Analytics Student</span></p>
+                  <p>I am a<span>Leader</span></p>
+                  <p>I am a<span>Woman</span></p>
                 </div>
                 <span id="typed"></span>
               </div>
