--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <div class="container">
         <div class="mu-footer-area">
           <p class="mu-copy-right">
-            &copy; Copyright
+            &copy; Content Jetta Golembiewski 2023 Copyright
             <a rel="nofollow" href="http://markups.io">markups.io</a>. All right
             reserved.
           </p>
