--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@
 
               <div class="mu-featured-content">
                 <p>Welcome to my website!</p>
-                <a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn"
-                  >VIEW MY WORK</a
-                >
               </div>
             </div>
           </div>
@@ -217,7 +214,7 @@
                         <!-- Download Ressume Button -->
                         <a
                           href="file:///Users/jettagolembiewski/Downloads/Resume%20(1).pdf"
-                          class="mu-resume-btn"
+                          class="resume"
                           >Download My Resume</a
                         >
                       </div>
