--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
                         <!-- Download Ressume Button -->
                         <a
-                          href="file:///Users/jettagolembiewski/Downloads/Resume%20(1).pdf"
-                          class="resume"
+                          href="File:///Users/jettagolembiewski/Downloads/Resume%20(1).pdf"
+                          class="mu-resume-btn"
                           >Download My Resume</a
                         >
                       </div>
