--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                         <!-- Download Ressume Button -->
                         <a
-                          href="File:///Users/jettagolembiewski/Downloads/Resume%20(1).pdf"
+                          href="https://docs.google.com/document/d/1iaiIVYo2GyWTma7Mrh_tR6sIGFQXvfRRLySd50QF3po/edit"
                           class="mu-resume-btn"
                           >Download My Resume</a
                         >
