--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                         <!-- Download Ressume Button -->
                         <a
-                          href="https://docs.google.com/document/d/1iaiIVYo2GyWTma7Mrh_tR6sIGFQXvfRRLySd50QF3po/edit"
+                          href="https://www.linkedin.com/in/jetta-golembiewski-a82617202/overlay/1635524735046/single-media-viewer/?profileId=ACoAADO0bkIB9Ddp3XlMCSfEK6Qq4JxL_pTPd2Q"
                           class="mu-resume-btn"
                           >Download My Resume</a
                         >
