--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,7 +32,6 @@
 
     <!-- Main Style -->
     <link href="style.css" rel="stylesheet" />
-    
 
     <!-- Fonts -->
 
@@ -49,7 +47,6 @@
     />
     <link href="cookie.css" rel="stylesheet" />
 
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -57,8 +54,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
-
 
   <body>
     <!-- Start Header -->
@@ -108,7 +103,7 @@
       </div>
     </header>
     <!-- End Header -->
-   
+
     <!-- Start Featured Slider -->
 
     <section id="mu-featured-slider">
@@ -389,14 +384,12 @@
                   </div>
                 </div>
               </div>
-                <!-- End Contact Content -->
-              </div>
+              <!-- End Contact Content -->
             </div>
           </div>
         </div>
       </section>
       <!-- End Contact -->
- 
     </main>
 
     <!-- End main content -->
@@ -415,41 +408,39 @@
       <div class="container">
         <div class="mu-footer-area">
           <p class="mu-copy-right">
-            <a rel="privacypolicy" href="PP.html">Privacy Policy</a>
+            <a class="" href="PP.html">Privacy Policy</a>
           </p>
         </div>
       </div>
       <div class="container">
         <div class="mu-footer-area">
           <p class="mu-copy-right">
-            <a rel="Termsconditions" href="TC.html">Terms & Conditions</a>
+            <a class="Termsconditions" href="TC.html">Terms & Conditions</a>
           </p>
         </div>
       </div>
       <div class="container">
         <div class="mu-footer-area">
           <p class="mu-copy-right">
-            <a rel="Cookies" href="Cookies.html">Cookie Policy</a>
+            <a class="cookies" href="Cookies.html">Cookie Policy</a>
           </p>
         </div>
       </div>
 
       <div id="cookie-popup">
         <p>
-          By using this site you agree to the storing of cookies on your device to
-          enhance site navigation and to analyze site usage. Learn more about our
+          By using this site you agree to the storing of cookies on your device
+          to enhance site navigation and to analyze site usage. Learn more about
+          our
           <a href="/Cookies.html">cookie policy</a>.
         </p>
         <p>
           <button id="accept-cookies">Accept</button>
         </p>
       </div>
-
     </footer>
 
     <!-- End footer -->
-
-
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -459,10 +450,7 @@
     <!-- Slick slider -->
     <script type="text/javascript" src="js/slick.min.js"></script>
     <!-- Filterable Gallery js -->
-    <script
-      type="text/javascript"
-      src="js/jquery.filterizr.min.js"
-    ></script>
+    <script type="text/javascript" src="js/jquery.filterizr.min.js"></script>
     <!-- Gallery Lightbox -->
     <script
       type="text/javascript"
@@ -475,25 +463,25 @@
     <!-- On scroll JS  -->
     <script src="js/jquery.appear.js"></script>
     <!-- Progress Bar -->
-    <script
-      type="text/javascript"
-      src="js/jquery.lineProgressbar.js"
-    ></script>
+    <script type="text/javascript" src="js/jquery.lineProgressbar.js"></script>
 
     <!-- Custom js -->
     <script type="text/javascript" src="js/custom.js"></script>
 
     <script src="cookie.js"></script>
   </body>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3B0X2BQ6RJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-3B0X2BQ6RJ"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-3B0X2BQ6RJ');
-</script>
-  
-
+    gtag("config", "G-3B0X2BQ6RJ");
+  </script>
 </html>
