--- a/index.html
+++ b/index.html
@@ -194,16 +194,19 @@
                         <!-- Start Social Media -->
                         <div class="mu-social-media">
                           <h3>Social</h3>
-                          <a href="https://twitter.com/jettalynn_"
-                            ><i class="fa fa-twitter"></i
-                          ></a>
+                          <a href="https://twitter.com/jettalynn_">
+                            <i class="fa fa-twitter"></i>
+                            <span class="sr-only">Twitter profile</span>
+                          </a>
                           <a
                             href="https://www.linkedin.com/in/jetta-golembiewski-a82617202/"
-                            ><i class="fa fa-linkedin"></i
-                          ></a>
+                            ><i class="fa fa-linkedin"></i>
+                            <span class="sr-only">LinkedIn profile</span>
+                          </a>
                           <a href="https://github.com/JettaGolembiewski"
-                            ><i class="fa fa-github"></i
-                          ></a>
+                            ><i class="fa fa-github"></i>
+                            <span class="sr-only">Github profile</span>
+                          </a>
                         </div>
 
                         <!-- Download Ressume Button -->
